# tomo

./: .gitignore  Cargo.toml  README.md  release-plz.toml
.github/workflows/: ci.yml  release.yml
crates/tomocli/: CHANGELOG.md  Cargo.toml
crates/tomocli/src/: commands.rs  fmt.rs  hex.rs  main.rs  paths.rs
crates/tomocli/src/commands/: ainb.rs  bamta.rs  bars.rs  bfres.rs  bntx.rs  bnvib.rs  bwav.rs  byml.rs  lms.rs  msbp.rs  msbt.rs  nca.rs  nsp.rs  romfs.rs  rstbl.rs  sarc.rs  yaml.rs  zs.rs
crates/tomocli/src/commands/bfres/: gltf.rs
crates/tomolib/: CHANGELOG.md  Cargo.toml
crates/tomolib/fuzz/: Cargo.toml
crates/tomolib/fuzz/fuzz_targets/: ainb.rs  bars.rs  bfres.rs  bntx.rs  bwav.rs  byml.rs  msbp.rs  msbt.rs  rstbl.rs  sarc.rs  zs.rs
crates/tomolib/src/: error.rs  formats.rs  hashlist.rs  lib.rs
crates/tomolib/src/formats/: ainb.rs  amta.rs  bars.rs  bfres.rs  binio.rs  bntx.rs  bnvib.rs  bwav.rs  byml.rs  hash.rs  lms.rs  msbp.rs  msbt.rs  nsp.rs  rstbl.rs  sarc.rs  zs.rs
crates/tomolib/src/formats/ainb/: exb.rs  model.rs  read.rs  write.rs  yaml.rs
crates/tomolib/src/formats/bfres/: model.rs
crates/tomolib/src/formats/bntx/: dict.rs  encode_gpu.rs  format.rs  image.rs  swizzle.rs  write.rs
crates/tomolib/src/formats/lms/: yaml.rs
crates/tomolib/src/formats/lms/yaml/: codec.rs  emit.rs  parse.rs  registry.rs
crates/tomolib/src/formats/nca/: crypto.rs  keys.rs  mod.rs  patch.rs  romfs.rs  verify.rs
