[package]
name = "tomocli"
description = "Command-line tool for working with Tomodachi Life data formats."
version = "1.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[[bin]]
name = "tomo"
path = "src/main.rs"

[features]
default = ["image-encode-gpu"]
image-encode-gpu = ["tomolib/image-encode-gpu"]

[dependencies]
tomolib = { workspace = true, features = ["image"] }
clap.workspace = true
anyhow.workspace = true
tabled.workspace = true
owo-colors.workspace = true
rayon.workspace = true
indicatif.workspace = true
serde.workspace = true
serde_json.workspace = true
saphyr.workspace = true
base64.workspace = true
ryu.workspace = true
itoa.workspace = true

[lints]
workspace = true
